# ml-ecommerce-recsys

./: .gitignore  README.md  pyproject.toml  requirements.txt
airflow/dags/: retrain_dag.py
docker/: Dockerfile  docker-compose.yml  requirements-api.txt
docs/: monitoring.md
notebooks/: 01_eda.ipynb  02_models.ipynb  03_mlflow_tracking.ipynb
scripts/: log_mlflow_runs.py  setup_mlflow.sh
src/api/: __init__.py  main.py  schemas.py
src/features/: __init__.py  pipeline.py
src/models/: __init__.py  artifact.py  predictor.py
src/monitoring/: __init__.py  metrics.py
tests/: test_artifact.py  test_features.py  test_monitoring.py
