[project]
name = "ml-ecommerce-recsys"
version = "0.1.0"
description = "Рекомендации товаров в электронной коммерции"
requires-python = ">=3.12"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.1.3",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    "implicit==0.7.3",
    "mlflow==2.18.0",
    "fastapi==0.115.5",
    "uvicorn==0.32.1",
    "pydantic==2.10.2",
    "apache-airflow==2.10.3",
    "python-dotenv==1.0.1",
    "tqdm==4.67.1",
    "joblib==1.4.2",
    "notebook==7.3.1",
    "ipykernel==6.29.5",
    "matplotlib==3.9.3",
    "seaborn==0.13.2",
    "plotly==5.24.1",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
